fixed alignment

--- a/assets/css/stylesheets.css
+++ b/assets/css/stylesheets.css
@@ -11,7 +11,9 @@
 
 #intro
 {
-  position: relative;
+  position: absolute;
+  top:8px;
+  left:28.1%;
   display: block;
   margin-left: auto;
   margin-right: auto;
